@@ -66,11 +66,25 @@ Quickstart
 Unit testing
 ------------
 
-To start the unit tests, run:
+To start the tests code, run:
 
 .. code-block:: bash
 
   $ python setup.py nosetests
+
+It will run some unit tests and some functional tests against two
+public caldav servers, one dedicated baikal server hosted by Tobias
+Brox, and the official SoGO demo server.  You may add your own private
+servers into tests/conf_private.py, like this:
+
+.. code-block:: python
+
+  caldav_servers = [{"url": "https://myuser:mypass@myserver.example.com:80/caldav.php/"}]
+
+the dict may contain:
+ * username and password (if not embedded in the URL)
+ * principal_url (used to verify Principal(...).url)
+ * backwards_compatibility_url (use this if you've been using caldav versions prior to 0.2)
 
 
 Documentation
